# libopencl-stub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  builder.py
src/: libopencl.c
